--- a/Lab1.html
+++ b/Lab1.html
@@ -7,5 +7,18 @@
               <link rel="stylesheet" href="styles.css"> 
             </head>
     </header>
+
+    <body> 
+        <header class="header">
+             <h1>My Website</h1> 
+             <nav> 
+                <ul> 
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li> 
+                    <li><a href="#">Services</a></li> 
+                    <li><a href="#">Contact</a></li> 
+                </ul> 
+            </nav>
+            <body>
     
 </html>
