--- a/Lab1.html
+++ b/Lab1.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <header>
         <head>
             <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0">
              <title>COSC 224 Lab1</title>
               <link rel="stylesheet" href="styles.css"> 
             </head>
-    </header>
 
     <body> 
         <header class="header">
@@ -15,10 +13,10 @@
                 <ul> 
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li> 
-                    <li><a href="#">Services</a></li> 
                     <li><a href="#">Contact</a></li> 
                 </ul> 
             </nav>
-            <body>
+        </header>
+    </body>
     
 </html>
