--- a/Lab1.html
+++ b/Lab1.html
@@ -17,6 +17,21 @@
                 </ul> 
             </nav>
         </header>
+        <div class="container"> 
+            <aside class="sidebar"> 
+                <h2>Sidebar</h2> 
+                <ul> 
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li> 
+                    <li><a href="#">Link 3</a></li> 
+                    <li><a href="#">Link 4</a></li> 
+                </ul> 
+            </aside> 
+            <main class="content"> 
+                <h1>Main Content</h1> 
+                <p>This is the main content area.</p> 
+            </main> 
+        </div>
     </body>
     
 </html>
