--- a/Lab1.html
+++ b/Lab1.html
@@ -32,6 +32,9 @@
                 <p>This is the main content area.</p> 
             </main> 
         </div>
+        <footer class="footer"> 
+            <p>&copy; 2025 My Website</p> 
+        </footer>
     </body>
     
 </html>
